@@ -1085,21 +1085,26 @@ extern "C" {
 #define MOUSEEVENTF_XDOWN 0x00000080
 #define MOUSEEVENTF_XUP 0x00000100
 #endif
+/* Also in pbt.h */
 #if (_WIN32_WINNT >= 0x0400)
-#define PBT_APMQUERYSUSPEND 0x0000
-#define PBT_APMQUERYSTANDBY 0x0001
-#define PBT_APMQUERYSUSPENDFAILED 0x0002
-#define PBT_APMQUERYSTANDBYFAILED 0x0003
-#define PBT_APMSUSPEND 0x0004
-#define PBT_APMSTANDBY 0x0005
-#define PBT_APMRESUMECRITICAL 0x0006
-#define PBT_APMRESUMESUSPEND 0x0007
-#define PBT_APMRESUMESTANDBY 0x0008
-#define PBT_APMBATTERYLOW 0x0009
-#define PBT_APMPOWERSTATUSCHANGE 0x000A
-#define PBT_APMOEMEVENT 0x000B
-#define PBT_APMRESUMEAUTOMATIC 0x0012
+#define PBT_APMQUERYSUSPEND 0
+#define PBT_APMQUERYSTANDBY 1
+#define PBT_APMQUERYSUSPENDFAILED 2
+#define PBT_APMQUERYSTANDBYFAILED 3
+#define PBT_APMSUSPEND 4
+#define PBT_APMSTANDBY 5
+#define PBT_APMRESUMECRITICAL 6
+#define PBT_APMRESUMESUSPEND 7
+#define PBT_APMRESUMESTANDBY 8
+#define PBT_APMBATTERYLOW 9
+#define PBT_APMPOWERSTATUSCHANGE 10
+#define PBT_APMOEMEVENT 11
+#define PBT_APMRESUMEAUTOMATIC 18
+
+#define PBTF_APMRESUMEFROMFAILURE 1
 #endif
+/* end pbt.h */
+
 #define PM_NOREMOVE 0
 #define PM_REMOVE 1
 #define PM_NOYIELD 2
